fix: 允许撤销快照保存空字段